Fix spacing a bit

--- a/client/src/app/index.scss
+++ b/client/src/app/index.scss
@@ -32,11 +32,11 @@ $icon-font-path: "../../bootstrap-sass/assets/fonts/bootstrap/";
 }
 
 .main-content {
-  padding-top: 3.5em;
+  padding-top: 4.5em;
 }
 
 .jumbotron {
-  padding-top: 1em;
+  padding-top: 4em;
 }
 
 a.nav.navbar-brand {
